Remove /ui/clientMetadata API.
