# src/main/resources/public/openapi.json
@@ -225,32 +225,6 @@
         }
       }
     },
-    "/ui/clientMetadata": {
-      "get": {
-        "tags": [
-          "verifier api"
-        ],
-        "description": "Gets the Client Metadata of this Verifier Endpoint",
-        "operationId": "getClientMetadata",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "nullable": false,
-                  "additionalProperties": true
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Server error."
-          }
-        }
-      }
-    },
     "/utilities/validations/msoMdoc/deviceResponse": {
       "post": {
         "tags": [
